more footer and html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="favorites">
                 <a href="https://shop.magnoliamarket.com/products/pine-cone-wreath">
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XmasMgnlprdct09_29_10_of_15.jpg?v=1475688371" width="320px" alt="Pinecone Wreath">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XmasMgnlprdct09_29_10_of_15.jpg?v=1475688371" width="320" alt="Pinecone Wreath">
                         <h3>Pinecone Wreath</h3>
                         <p>$85</p>
                     </article>
@@ -64,7 +64,7 @@
 
                 <a href="https://shop.magnoliamarket.com/products/gardening-tool-ornament">   
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XMASMGNLPRDCT09-21_56_of_71.jpg?v=1474561896" width="320px" alt="Gardening Tool Ornament">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XMASMGNLPRDCT09-21_56_of_71.jpg?v=1474561896" width="320" alt="Gardening Tool Ornament">
                         <h3>Gardening Tool Ornament</h3>
                         <p>$7</p>
                     </article>
@@ -72,7 +72,7 @@
 
                 <a href="https://shop.magnoliamarket.com/products/merry-christmas-garland">
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/mgnlprdct09_26_60_of_64.jpg?v=1475618069" width="320px"  alt="Merry Christmas Garland">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/mgnlprdct09_26_60_of_64.jpg?v=1475618069" width="320"  alt="Merry Christmas Garland">
                         <h3><q>Merry Christmas</q> Garland</h3>
                         <p>$22</p>
                     </article>
@@ -80,7 +80,7 @@
 
                 <a href="https://shop.magnoliamarket.com/products/paper-mache-animal-ornament">
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/MGNLPRDCT10_28_19_of_38.jpg?v=1477669239" width="320px"  alt="Paper Mache Animal Ornament">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/MGNLPRDCT10_28_19_of_38.jpg?v=1477669239" width="320"  alt="Paper Mache Animal Ornament">
                         <h3>Paper Mache Animal Ornament</h3>
                         <p>$9</p>
                     </article>
@@ -88,7 +88,7 @@
 
                 <a href="https://shop.magnoliamarket.com/products/metal-pedestal">
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/Magnolia_Product_41_of_47.jpg?v=1464960812" width="320px" alt="Metal Pedestal">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/Magnolia_Product_41_of_47.jpg?v=1464960812" width="320" alt="Metal Pedestal">
                         <h3>Metal Pedestal</h3>
                         <p>$68</p>
                     </article>
@@ -96,7 +96,7 @@
 
                 <a href="https://shop.magnoliamarket.com/products/antique-brass-wire-evergreens">
                     <article class="favorites-thumb">
-                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XMASMGNLPRDCT09-21_31_of_71.jpg?v=1474563246" width="320px" alt="Brass Wire Evergreen">
+                        <img class="favorites-bg" src="https://cdn.shopify.com/s/files/1/0207/8508/products/XMASMGNLPRDCT09-21_31_of_71.jpg?v=1474563246" width="320" alt="Brass Wire Evergreen">
                         <h3>Brass Wire Evergreen</h3>
                         <p>$48</p>
                     </article>
@@ -137,28 +137,24 @@
         </section>
 
         <footer>
-            <h2 class="visuallyhidden">Social Media</h2>
-            <nav class="social-nav">
-                <ul>
-                    <li><a href="#"><img src="images/social/facebook.png" width="30px" alt="Facebook Icon"></a></li>
-                    <li><a href="#"><img src="images/social/instagram.png" width="30px" alt="Instagram Icon"></a></li>
-                    <li><a href="#"><img src="images/social/twitter.png" width="30px" alt="Twitter Plus Icon"></a></li>
-                    <li><a href="#"><img src="images/social/youtube.png" width="30px" alt="You Tube Icon"></a></li>
-                    <li><a href="#"><img src="images/social/tumblr.png" width="30px" alt="Tumblr Icon"></a></li>
-                </ul>
-            </nav>
-
-            <nav class="footer-nav">
-                <h3>Visit the Silos</h3>
-                    <div class="address">
-                        <a href="https://www.google.com/maps/dir//Magnolia+Market,+601+Webster+Ave,+Waco,+TX+76710/@31.5527086,-97.1319607,17z/data=!4m13!1m4!3m3!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2sMagnolia+Market!3b1!4m7!1m0!1m5!1m1!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2m2!1d-97.129772!2d31.552704">601 WEBSTER AVE</a>
-                        <a href="https://www.google.com/maps/dir//Magnolia+Market,+601+Webster+Ave,+Waco,+TX+76710/@31.5527086,-97.1319607,17z/data=!4m13!1m4!3m3!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2sMagnolia+Market!3b1!4m7!1m0!1m5!1m1!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2m2!1d-97.129772!2d31.552704">WACO, TX 76706</a>
+            <section class="footer-width">
+                <nav class="footer-nav">
+                    <div class="nav-section">
+                        <h3>Visit the Silos</h3>
+                        <div class="address">
+                            <p>
+                                <a href="https://www.google.com/maps/dir//Magnolia+Market,+601+Webster+Ave,+Waco,+TX+76710/@31.5527086,-97.1319607,17z/data=!4m13!1m4!3m3!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2sMagnolia+Market!3b1!4m7!1m0!1m5!1m1!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2m2!1d-97.129772!2d31.552704">601 WEBSTER AVE</a>
+                            </p>
+                            <p>
+                                <a href="https://www.google.com/maps/dir//Magnolia+Market,+601+Webster+Ave,+Waco,+TX+76710/@31.5527086,-97.1319607,17z/data=!4m13!1m4!3m3!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2sMagnolia+Market!3b1!4m7!1m0!1m5!1m1!1s0x864f838b25d7d691:0x166fa83c73cf6c19!2m2!1d-97.129772!2d31.552704">WACO, TX 76706</a>
+                            </p>
+                            <p><a href="tel:254-235-0603">254-235-0603</a></p>
+                            <p><a href="https://magnoliamarket.com/silos">HOURS &amp; INFORMATION</a></p>
+                        </div>
                     </div>
 
-                    <a href="tel:254-235-0603">254-235-0603</a>
-                    <a href="https://magnoliamarket.com/silos">HOURS &amp; Information</a>
-
-                    <h3>Shop Online</h3>
+                    <div class="nav-section">
+                        <h3>Shop Online</h3>
                         <ul>
                             <li><a href="https://shop.magnoliamarket.com/collections/bless-your-home">HOME</a></li>
                             <li><a href="https://shop.magnoliamarket.com/collections/lifestyle">LIFESTYLE</a></li>
@@ -167,25 +163,34 @@
                             <li><a href="https://shop.magnoliamarket.com/collections/seed-supply">SEED + SUPPLY</a></li>
                             <li><a href="https://shop.magnoliamarket.com/pages/paints">PAINT</a></li>
                         </ul>
+                    </div>
 
-                    <h3>Magnolia</h3>
+                    <div class="nav-section">
+                        <h3>Magnolia</h3>
                         <ul>
                             <li><a href="https://magnoliamarket.com/about">OUR STORY</a></li>
                             <li><a href="https://support.themagnoliamarket.com/hc/en-us/articles/205260965-Terms-of-Service">TERMS</a></li>
                             <li><a href="https://support.themagnoliamarket.com/hc/en-us/articles/204592859-Privacy-Policy">PRIVACY POLICY</a></li>
                             <li><a href="https://magnoliamarket.com/careers/">CAREERS</a></li>
                         </ul>
-
-                    <h3>Help</h3>
+                    </div>
+                       
+                    <div class="nav-section">
+                        <h3>Help</h3>
                         <ul>
                             <li><a href="https://support.themagnoliamarket.com/hc/en-us/">HELP &amp; INFO</a></li>
                             <li><a href="https://shop.magnoliamarket.com/pages/order-lookup">ORDER STATUS</a></li>
                             <li><a href="https://support.themagnoliamarket.com/hc/en-us/articles/200906599-Returns-Exchanges-and-Damages">RETURNS &amp; EXCHANGES</a></li>
                             <li><a href="https://support.themagnoliamarket.com/hc/en-us/articles/204830229-Shipping-Information">SHIPPING</a></li>
                         </ul>
-            </nav>
+                    </div>
+                </nav>
+            </section>
+          
 
-            <p>&copy;2016 THE MAGNOLIA MARKET</p>
+            <div class="footer-copyright">
+                <p>&copy;2016 THE MAGNOLIA MARKET</p>
+            </div>
         </footer>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
