--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
                     <h3>Living Out a Dream</h3>
                 </a>
                 <p>Meet Magnolia: we're all about the home. Owned by Chip and Joanna Gaines from HGTV's Fixer Upper, we're a small town business deep in the heart of Texas inspiring folks from all walks of life to take ownership of their spaces &amp; create value where they're planted.</p>
+
+                <a href="https://magnoliamarket.com/episode-01-the-cargo-ship-house/">
+                    <p>LEARN MORE &#10148</p>
+                </a>
             </article>
 
             <aside>
@@ -140,7 +144,11 @@
                 <a href="https://magnoliamarket.com/episode-01-the-cargo-ship-house/">
                     <h3>Episode 01 - The Cargo Ship House</h3>
                 </a>
-                <p>When we started working on a design concept for the Chapman home, I liked that Brittany and Andrew loved the traditional style, but didn't want it to be too formal.  They wanted their home t be comfortable, welcoming and a space...</p>
+                <p>When we started working on a design concept for the Chapman home, I liked that Brittany and Andrew loved the traditional style, but didn't want it to be too formal.  They wanted their home to be a comfortable, welcoming and space...</p>
+
+                <a href="https://magnoliamarket.com/episode-01-the-cargo-ship-house/">
+                <p>LEARN MORE &#10148</p>
+                </a>
             </article>
         </section>
 
