cleaning up code

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <p>Meet Magnolia: we're all about the home. Owned by Chip and Joanna Gaines from HGTV's Fixer Upper, we're a small town business deep in the heart of Texas inspiring folks from all walks of life to take ownership of their spaces &amp; create value where they're planted.</p>
 
                 <a href="https://magnoliamarket.com/episode-01-the-cargo-ship-house/">
-                    <p>LEARN MORE &#10148</p>
+                    <p>LEARN MORE &#10148;</p>
                 </a>
             </article>
 
@@ -147,7 +147,7 @@
                 <p>When we started working on a design concept for the Chapman home, I liked that Brittany and Andrew loved the traditional style, but didn't want it to be too formal.  They wanted their home to be a comfortable, welcoming and space...</p>
 
                 <a href="https://magnoliamarket.com/episode-01-the-cargo-ship-house/">
-                <p>LEARN MORE &#10148</p>
+                <p>LEARN MORE &#10148;</p>
                 </a>
             </article>
         </section>
@@ -202,11 +202,8 @@
                     </div>
                 </nav>
             </div>
-          
-
-            <div class="footer-copyright">
-                <p>&copy;2016 THE MAGNOLIA MARKET</p>
-            </div>
+            
+                <p class="footer-copyright">&copy;2016 THE MAGNOLIA MARKET</p>
         </footer>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
